# MoP

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_gpt_mop.py  test_simple_whisper.py  test_whisper_mop.py
.github/workflows/: ci.yml
experiments/: README.md  ab5_paper_benchmark.py  ab5_tournament.py  cifar100_ab3_param_budgets.py  cifar100_ab4_param_budgets.py  cifar100_ab5_param_budgets.py  cifar100_crossview_mixer.py  cifar100_edgewise_gates.py  cifar100_full_benchmark_colab.ipynb  cifar100_multi_seed.py  cifar100_multihop_gates.py  cifar100_twohop_gates.py  cifar100_twohop_param_budgets.py  cifar10_ab3_param_budgets.py  cifar10_ab_param_budgets.py  cifar10_crossview_mixer.py  cifar10_edgewise_gates.py  cifar10_mop_sweep.py  cifar10_multi_seed.py  cifar10_multihop_gates.py  cifar10_twohop_gates.py  cifar10_twohop_param_budgets.py  imagenet_ab_param_budgets.py  imagenet_abe_benchmark_colab.ipynb  voc_localization_vit.py
mop/: __init__.py  visualization.py
mop/models/: __init__.py  attention_variants.py  components.py  gpt_comparison.py  gpt_mop.py  quartet_attn_patch.py  test_models.py  vit_baseline.py  vit_mop.py  whisper_comparison.py  whisper_mop.py
mop/training/: __init__.py  trainer.py  utils.py
mop_transformers.egg-info/: PKG-INFO  SOURCES.txt
results/cifar10/cifar100_ab_2025-08-17/: README.md  history_A.csv  (+7 more)
tests/: test_edgewise_lens_bank.py  test_forward_shapes.py  test_gpt_mop.py  test_mop_moe.py  test_param_parity.py  test_voc_localization.py  test_whisper_mop.py
