[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mop-transformers"
version = "0.1.0"
description = "Mixture of Products (MoP): spatial boolean logic modules for Transformers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Eran Ben Artzy" }]

[tool.setuptools.packages.find]
include = ["mop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
